20240604_0923 'JSP프로젝트 완성 전'

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -77,6 +77,7 @@
   --bs-link-hover-color: #0a58ca;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
+  font-family: "Jua","Dongle" !important;
 }
 
 *,
@@ -10845,4 +10846,20 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   min-height: 15rem;
+}
+
+.jua-regular {
+  font-family: "Jua", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.dongle-regular {
+  font-family: "Dongle", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+* {
+	font-family: "Jua" !important;
 }
